tests/duarouter/trips/errors/vehicle_false_departspeed/errors.duarouter
Error: Invalid departSpeed definition for trip '0';
 must be one of ("random", "max", or a float>=0)
Quitting (on error).
